testing fix in background on iphones

--- a/public/index.css
+++ b/public/index.css
@@ -10,5 +10,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  height: 100%;
+  overflow: hidden;
   background-color: #464646;
 }
