--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -91,7 +91,6 @@ to   { opacity: 1; }
   transform: translateY(-50%);
   width:100%;
   text-align: center;
-  position: absolute;
 }
 @media screen and (max-width: 900px) {
   .NavBarAnchorContainer {
